--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,6 @@
     <script type="module" src="app.js"></script>
   </head>
   <body>
-    <h1>Hello, World!</h1>
-
-    <p>wassaP!</p>
+    <div id="root" class="container"></div>
   </body>
 </html>
