--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,11 @@
     <script type="module" src="app.js"></script>
   </head>
   <body>
-    <div id="root" class="container"></div>
+    <section class="container">
+      <header class="header">
+        <button>Show more!</button>
+      </header>
+      <div id="root"></div>
+    </section>
   </body>
 </html>
