--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <body>
     <section class="container">
       <header class="header">
-        <button>Show more!</button>
+        <button class="load-more">Show more!</button>
       </header>
       <div id="root"></div>
     </section>
