--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>My First Parcel App</title>
+    <title>Rick and Morthy viewer</title>
     <link rel="stylesheet" href="global.css" />
     <script type="module" src="app.js"></script>
   </head>
